tests/baselines/reference/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.errors.txt
==== tests/cases/compiler/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts (1 errors) ====
    module Alpha {
        export var x = 100;
    }
    
    class Beta extends Alpha.x {
                             ~
!!! qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts(5,26): error TS2094: The property 'x' does not exist on value of type 'Alpha'.
    }